// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login/components/connectivityPane matches snapshot 1`] = `
<div
  className="connectivity-pane"
  role="main"
>
  <div
    className="main"
    role="dialog"
  >
    <h1>
      connectivityPane.header
    </h1>
    <div
      className="connection-string"
    >
      <CopyableMaskField
        allowMask={true}
        ariaLabel="connectivityPane.connectionStringTextBox.label"
        error=""
        label="connectivityPane.connectionStringTextBox.label"
        onTextChange={[Function]}
        readOnly={false}
        required={true}
        t={
          [MockFunction] {
            "calls": Array [
              Array [
                "connectivityPane.header",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.ariaLabel",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.tooltip",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.label",
              ],
              Array [
                "connectivityPane.notes",
              ],
              Array [
                "connectivityPane.saveButton.label",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "connectivityPane.header",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.ariaLabel",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.tooltip",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.notes",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.saveButton.label",
              },
            ],
          }
        }
        value=""
      />
    </div>
    <div
      className="remember-connection-string"
    >
      <StyledCheckboxBase
        ariaLabel="connectivityPane.connectionStringCheckbox.ariaLabel"
        onChange={[Function]}
      />
      <Component
        tooltipText="connectivityPane.connectionStringCheckbox.tooltip"
      >
        connectivityPane.connectionStringCheckbox.label
      </Component>
    </div>
    <div
      className="notes"
    >
      <Text>
        connectivityPane.notes
      </Text>
    </div>
    <div
      className="connection-button"
    >
      <CustomizedPrimaryButton
        disabled={true}
        onClick={[Function]}
      >
        connectivityPane.saveButton.label
      </CustomizedPrimaryButton>
    </div>
  </div>
</div>
`;

exports[`login/components/connectivityPane matches snapshot for empty connection string 1`] = `
<div
  className="connectivity-pane"
  role="main"
>
  <div
    className="main"
    role="dialog"
  >
    <h1>
      connectivityPane.header
    </h1>
    <div
      className="connection-string"
    >
      <CopyableMaskField
        allowMask={true}
        ariaLabel="connectivityPane.connectionStringTextBox.label"
        error=""
        label="connectivityPane.connectionStringTextBox.label"
        onTextChange={[Function]}
        readOnly={false}
        required={true}
        t={
          [MockFunction] {
            "calls": Array [
              Array [
                "connectivityPane.header",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.ariaLabel",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.tooltip",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.label",
              ],
              Array [
                "connectivityPane.notes",
              ],
              Array [
                "connectivityPane.saveButton.label",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "connectivityPane.header",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.ariaLabel",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.tooltip",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.notes",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.saveButton.label",
              },
            ],
          }
        }
        value="invalid connection string"
      />
    </div>
    <div
      className="remember-connection-string"
    >
      <StyledCheckboxBase
        ariaLabel="connectivityPane.connectionStringCheckbox.ariaLabel"
        onChange={[Function]}
      />
      <Component
        tooltipText="connectivityPane.connectionStringCheckbox.tooltip"
      >
        connectivityPane.connectionStringCheckbox.label
      </Component>
    </div>
    <div
      className="notes"
    >
      <Text>
        connectivityPane.notes
      </Text>
    </div>
    <div
      className="connection-button"
    >
      <CustomizedPrimaryButton
        disabled={false}
        onClick={[Function]}
      >
        connectivityPane.saveButton.label
      </CustomizedPrimaryButton>
    </div>
  </div>
</div>
`;

exports[`login/components/connectivityPane matches snapshot for invalid connection string 1`] = `
<div
  className="connectivity-pane"
  role="main"
>
  <div
    className="main"
    role="dialog"
  >
    <h1>
      connectivityPane.header
    </h1>
    <div
      className="connection-string"
    >
      <CopyableMaskField
        allowMask={true}
        ariaLabel="connectivityPane.connectionStringTextBox.label"
        error=""
        label="connectivityPane.connectionStringTextBox.label"
        onTextChange={[Function]}
        readOnly={false}
        required={true}
        t={
          [MockFunction] {
            "calls": Array [
              Array [
                "connectivityPane.header",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.ariaLabel",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.tooltip",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.label",
              ],
              Array [
                "connectivityPane.notes",
              ],
              Array [
                "connectivityPane.saveButton.label",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "connectivityPane.header",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.ariaLabel",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.tooltip",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.notes",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.saveButton.label",
              },
            ],
          }
        }
        value=""
      />
    </div>
    <div
      className="remember-connection-string"
    >
      <StyledCheckboxBase
        ariaLabel="connectivityPane.connectionStringCheckbox.ariaLabel"
        onChange={[Function]}
      />
      <Component
        tooltipText="connectivityPane.connectionStringCheckbox.tooltip"
      >
        connectivityPane.connectionStringCheckbox.label
      </Component>
    </div>
    <div
      className="notes"
    >
      <Text>
        connectivityPane.notes
      </Text>
    </div>
    <div
      className="connection-button"
    >
      <CustomizedPrimaryButton
        disabled={true}
        onClick={[Function]}
      >
        connectivityPane.saveButton.label
      </CustomizedPrimaryButton>
    </div>
  </div>
</div>
`;

exports[`login/components/connectivityPane matches snapshot for valid connection string 1`] = `
<div
  className="connectivity-pane"
  role="main"
>
  <div
    className="main"
    role="dialog"
  >
    <h1>
      connectivityPane.header
    </h1>
    <div
      className="connection-string"
    >
      <CopyableMaskField
        allowMask={true}
        ariaLabel="connectivityPane.connectionStringTextBox.label"
        error=""
        label="connectivityPane.connectionStringTextBox.label"
        onTextChange={[Function]}
        readOnly={false}
        required={true}
        t={
          [MockFunction] {
            "calls": Array [
              Array [
                "connectivityPane.header",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringTextBox.label",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.ariaLabel",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.tooltip",
              ],
              Array [
                "connectivityPane.connectionStringCheckbox.label",
              ],
              Array [
                "connectivityPane.notes",
              ],
              Array [
                "connectivityPane.saveButton.label",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "connectivityPane.header",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringTextBox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.ariaLabel",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.tooltip",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.connectionStringCheckbox.label",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.notes",
              },
              Object {
                "type": "return",
                "value": "connectivityPane.saveButton.label",
              },
            ],
          }
        }
        value=""
      />
    </div>
    <div
      className="remember-connection-string"
    >
      <StyledCheckboxBase
        ariaLabel="connectivityPane.connectionStringCheckbox.ariaLabel"
        onChange={[Function]}
      />
      <Component
        tooltipText="connectivityPane.connectionStringCheckbox.tooltip"
      >
        connectivityPane.connectionStringCheckbox.label
      </Component>
    </div>
    <div
      className="notes"
    >
      <Text>
        connectivityPane.notes
      </Text>
    </div>
    <div
      className="connection-button"
    >
      <CustomizedPrimaryButton
        disabled={true}
        onClick={[Function]}
      >
        connectivityPane.saveButton.label
      </CustomizedPrimaryButton>
    </div>
  </div>
</div>
`;
